# Titanic-tutorial

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  check.py  pyproject.toml
.github/workflows/: python-app.yml
.hypothesis/examples/07f507c7faf7fcb9/: 804a92f0a9d6897f  f6ad909bddc0b311
.hypothesis/examples/2284ca29ae6a4107/: 00fdc1a0bf5b67de  78b3c70a11a23bf6  b6eb51fa7b5f31db  bf3764904db4762c  de53f7f7748960eb
.hypothesis/examples/2504ba8f4cec07b7/: 026d1fe8410c52e1  0542d83d9fc13da2  0ecdde6bbfa6d8d5  12b743716741b262  1386de57db9e02eb  143a6192ccb82367  14a792468f4f40c1  161db19db3df4936  1837e42bcb10d2be  19275f84f0b5da2e  19527aa3054d33f2  1a93cc36fc3df26c  1abc8c681e3d37de  1fabb8d21e678365  272c2edfa2eb13f7  27feeb0e36bf7229  2832c5b647d5b600  2bae7e9b7c571046  2e9c42a9cdbec266  2ec5462b9db93273  306a05541bc2e0a9  321ad1c4cc33b5a8  33c81331d89fae11  352ca26abefea9b7  368d2a14a0229d56  3840a2fe616b6d29  (+65 more)
.hypothesis/tmp/: tmp0a7wec0w  tmp20rfor1u  tmp3uxt4smd  tmp4367gszu  tmp8x6tg9qq  tmp9aplxue7  tmp9q49ct56  tmpaey_m4i3  tmpag_tfjsd  tmpd7d0u83d  tmpfcgywec1  tmpi5s1kee7  tmpiq50zb7t  tmpixbn5qq8  tmpj3r66mz9  tmpj_sx8qsx  tmpju1ifp52  tmpjyk2ny8e  tmpk2tvl21g  tmpkadavlak  tmpkft44diw  tmpomvq71ia  tmpq4t68hnl  tmpqkog1z4y  tmpt32nakzx  tmpthfgbhef
data/: predictions.csv
src/tests/: conftest.py  test_operations.py  test_preprocess.py
src/titanic_tutorial/: main.py  operations.py  preprocess.py
tests/: conftest.py  test_operations.py  test_preprocess.py
titanic/: constants.py  main.py  operations.py
titanic_tutorial/: main.py
(+1358 files in other folders)
