[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["Alikhan Aitbayev <y>"]
readme = "README.md"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
hypothesis = "^6.99.9"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
numpy = "^1.26.4"
typer-cli = "^0.0.13"
mypy = "^1.9.0"
scikit-learn = "^1.4.1"
scipy = "^1.12.0"

[tool.poetry.scripts]
titanic = "titanic.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
